# authentication_service/api/views.py
@@ -316,6 +316,7 @@ class InvitationsInvitationIdSend(View):
 
 @method_decorator(csrf_exempt, name="dispatch")
 @method_decorator(utils.login_required_no_redirect, name="get")
+@method_decorator(utils.login_required_no_redirect, name="post")
 class Organisations(View):
 
     GET_RESPONSE_SCHEMA = json.loads("""{
@@ -355,6 +356,8 @@ class Organisations(View):
     },
     "type": "array"
 }""")
+    POST_RESPONSE_SCHEMA = schemas.organisation
+    POST_BODY_SCHEMA = schemas.organisation_create
 
     def get(self, request, *args, **kwargs):
         """
@@ -388,12 +391,70 @@ class Organisations(View):
 
         return response
 
+    def post(self, request, *args, **kwargs):
+        """
+        :param self: A Organisations instance
+        :param request: An HttpRequest
+        """
+        body = utils.body_to_dict(request.body, self.POST_BODY_SCHEMA)
+        if not body:
+            return HttpResponseBadRequest("Body required")
+
+        result = Stubs.organisation_create(request, body, )
+
+        if type(result) is tuple:
+            result, headers = result
+        else:
+            headers = {}
+
+        # The result may contain fields with date or datetime values that will not
+        # pass JSON validation. We first create the response, and then maybe validate
+        # the response content against the schema.
+        response = JsonResponse(result, safe=False)
+
+        maybe_validate_result(response.content, self.POST_RESPONSE_SCHEMA)
+
+        for key, val in headers.items():
+            response[key] = val
+
+        return response
+
 
 @method_decorator(csrf_exempt, name="dispatch")
+@method_decorator(utils.login_required_no_redirect, name="delete")
 @method_decorator(utils.login_required_no_redirect, name="get")
+@method_decorator(utils.login_required_no_redirect, name="put")
 class OrganisationsOrganisationId(View):
 
+    DELETE_RESPONSE_SCHEMA = schemas.__UNSPECIFIED__
     GET_RESPONSE_SCHEMA = schemas.organisation
+    PUT_RESPONSE_SCHEMA = schemas.organisation
+    PUT_BODY_SCHEMA = schemas.organisation_update
+
+    def delete(self, request, organisation_id, *args, **kwargs):
+        """
+        :param self: A OrganisationsOrganisationId instance
+        :param request: An HttpRequest
+        :param organisation_id: integer An integer identifying an organisation a user belongs to
+        """
+        result = Stubs.organisation_delete(request, organisation_id, )
+
+        if type(result) is tuple:
+            result, headers = result
+        else:
+            headers = {}
+
+        # The result may contain fields with date or datetime values that will not
+        # pass JSON validation. We first create the response, and then maybe validate
+        # the response content against the schema.
+        response = JsonResponse(result, safe=False)
+
+        maybe_validate_result(response.content, self.DELETE_RESPONSE_SCHEMA)
+
+        for key, val in headers.items():
+            response[key] = val
+
+        return response
 
     def get(self, request, organisation_id, *args, **kwargs):
         """
@@ -414,6 +475,35 @@ class OrganisationsOrganisationId(View):
         response = JsonResponse(result, safe=False)
 
         maybe_validate_result(response.content, self.GET_RESPONSE_SCHEMA)
+
+        for key, val in headers.items():
+            response[key] = val
+
+        return response
+
+    def put(self, request, organisation_id, *args, **kwargs):
+        """
+        :param self: A OrganisationsOrganisationId instance
+        :param request: An HttpRequest
+        :param organisation_id: integer An integer identifying an organisation a user belongs to
+        """
+        body = utils.body_to_dict(request.body, self.PUT_BODY_SCHEMA)
+        if not body:
+            return HttpResponseBadRequest("Body required")
+
+        result = Stubs.organisation_update(request, body, organisation_id, )
+
+        if type(result) is tuple:
+            result, headers = result
+        else:
+            headers = {}
+
+        # The result may contain fields with date or datetime values that will not
+        # pass JSON validation. We first create the response, and then maybe validate
+        # the response content against the schema.
+        response = JsonResponse(result, safe=False)
+
+        maybe_validate_result(response.content, self.PUT_RESPONSE_SCHEMA)
 
         for key, val in headers.items():
             response[key] = val
@@ -807,6 +897,32 @@ class __SWAGGER_SPEC__(View):
                 "created_at",
                 "updated_at"
             ],
+            "type": "object"
+        },
+        "organisation_create": {
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            },
+            "required": [
+                "name"
+            ],
+            "type": "object"
+        },
+        "organisation_update": {
+            "minProperties": 1,
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            },
             "type": "object"
         },
         "user": {
@@ -1325,9 +1441,55 @@ class __SWAGGER_SPEC__(View):
                 "tags": [
                     "authentication"
                 ]
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "operationId": "organisation_create",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "data",
+                        "schema": {
+                            "$ref": "#/definitions/organisation_create",
+                            "x-scope": [
+                                ""
+                            ]
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "201": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/organisation",
+                            "x-scope": [
+                                ""
+                            ]
+                        }
+                    }
+                },
+                "tags": [
+                    "authentication"
+                ]
             }
         },
         "/organisations/{organisation_id}": {
+            "delete": {
+                "operationId": "organisation_delete",
+                "responses": {
+                    "204": {
+                        "description": ""
+                    }
+                },
+                "tags": [
+                    "authentication"
+                ]
+            },
             "get": {
                 "operationId": "organisation_read",
                 "produces": [
@@ -1355,7 +1517,42 @@ class __SWAGGER_SPEC__(View):
                         ""
                     ]
                 }
-            ]
+            ],
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "operationId": "organisation_update",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "data",
+                        "schema": {
+                            "$ref": "#/definitions/organisation_update",
+                            "x-scope": [
+                                ""
+                            ]
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/organisation",
+                            "x-scope": [
+                                ""
+                            ]
+                        }
+                    }
+                },
+                "tags": [
+                    "authentication"
+                ]
+            }
         },
         "/users": {
             "get": {
