# swagger/authentication_service.yml
@@ -171,6 +171,25 @@ definitions:
       - created_at
       - updated_at
 
+  organisation_create:
+    type: object
+    properties:
+      name:
+        type: string
+      description:
+        type: string
+    required:
+      - name
+
+  organisation_update:
+    type: object
+    properties:
+      name:
+        type: string
+      description:
+        type: string
+    minProperties: 1
+
   user:
     type: object
     properties:
@@ -740,15 +759,57 @@ paths:
             X-Total-Count:
               type: integer
               description: The total number of results matching the query
-
+      tags:
+        - authentication
+    post:
+      consumes:
+        - application/json
+      operationId: organisation_create
+      parameters:
+        - in: body
+          name: data
+          schema:
+            $ref: '#/definitions/organisation_create'
+      produces:
+        - application/json
+      responses:
+        '201':
+          description: ''
+          schema:
+            $ref: '#/definitions/organisation'
       tags:
         - authentication
 
   /organisations/{organisation_id}:
     parameters:
       - $ref: '#/parameters/organisation_id'
+    delete:
+      operationId: organisation_delete
+      responses:
+        '204':
+          description: ''
+      tags:
+        - authentication
     get:
       operationId: organisation_read
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: ''
+          schema:
+            $ref: '#/definitions/organisation'
+      tags:
+        - authentication
+    put:
+      consumes:
+        - application/json
+      operationId: organisation_update
+      parameters:
+        - in: body
+          name: data
+          schema:
+            $ref: '#/definitions/organisation_update'
       produces:
         - application/json
       responses:
